--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,24 @@
 {
   "name": "JP Desainer Kreatif",
-  "short_name": "JPDesainer",
-  "start_url": "/JP-Desainer-Kreatif/",
+  "short_name": "JP Desainer",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#25d366",
-  "description": "JP Desainer Kreatif – Jasa desain logo dan branding visual profesional.",
+  "orientation": "portrait",
+  "description": "Desain Logo, Banner, dan Branding Visual Eksklusif",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "favicon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "icon-512.png",
+      "src": "favicon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
